demo/generated/NaiveSqlParser.cpp

// Generated from NaiveSqlParser.g4 by ANTLR 4.7.1


#include "NaiveSqlParserListener.h"
#include "NaiveSqlParserVisitor.h"

#include "NaiveSqlParser.h"


using namespace antlrcpp;
using namespace WithDbSql;
using namespace antlr4;

NaiveSqlParser::NaiveSqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NaiveSqlParser::~NaiveSqlParser() {
  delete _interpreter;
}

std::string NaiveSqlParser::getGrammarFileName() const {
  return "NaiveSqlParser.g4";
}

const std::vector<std::string>& NaiveSqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NaiveSqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

NaiveSqlParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NaiveSqlParser::RootContext::EOF() {
  return getToken(NaiveSqlParser::EOF, 0);
}

NaiveSqlParser::SqlStatementsContext* NaiveSqlParser::RootContext::sqlStatements() {
  return getRuleContext<NaiveSqlParser::SqlStatementsContext>(0);
}


size_t NaiveSqlParser::RootContext::getRuleIndex() const {
  return NaiveSqlParser::RuleRoot;
}

void NaiveSqlParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void NaiveSqlParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}


antlrcpp::Any NaiveSqlParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::RootContext* NaiveSqlParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, NaiveSqlParser::RuleRoot);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(114);
      sqlStatements();
      break;
    }

    }
    setState(117);
    match(NaiveSqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SqlStatementsContext ------------------------------------------------------------------

NaiveSqlParser::SqlStatementsContext::SqlStatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NaiveSqlParser::SqlStatementContext *> NaiveSqlParser::SqlStatementsContext::sqlStatement() {
  return getRuleContexts<NaiveSqlParser::SqlStatementContext>();
}

NaiveSqlParser::SqlStatementContext* NaiveSqlParser::SqlStatementsContext::sqlStatement(size_t i) {
  return getRuleContext<NaiveSqlParser::SqlStatementContext>(i);
}

std::vector<tree::TerminalNode *> NaiveSqlParser::SqlStatementsContext::SEMI() {
  return getTokens(NaiveSqlParser::SEMI);
}

tree::TerminalNode* NaiveSqlParser::SqlStatementsContext::SEMI(size_t i) {
  return getToken(NaiveSqlParser::SEMI, i);
}

std::vector<NaiveSqlParser::EmptyStatementContext *> NaiveSqlParser::SqlStatementsContext::emptyStatement() {
  return getRuleContexts<NaiveSqlParser::EmptyStatementContext>();
}

NaiveSqlParser::EmptyStatementContext* NaiveSqlParser::SqlStatementsContext::emptyStatement(size_t i) {
  return getRuleContext<NaiveSqlParser::EmptyStatementContext>(i);
}


size_t NaiveSqlParser::SqlStatementsContext::getRuleIndex() const {
  return NaiveSqlParser::RuleSqlStatements;
}

void NaiveSqlParser::SqlStatementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatements(this);
}

void NaiveSqlParser::SqlStatementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatements(this);
}


antlrcpp::Any NaiveSqlParser::SqlStatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitSqlStatements(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::SqlStatementsContext* NaiveSqlParser::sqlStatements() {
  SqlStatementsContext *_localctx = _tracker.createInstance<SqlStatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, NaiveSqlParser::RuleSqlStatements);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 29) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 29)) & ((1ULL << (NaiveSqlParser::CREATE - 29))
      | (1ULL << (NaiveSqlParser::DELETE - 29))
      | (1ULL << (NaiveSqlParser::DROP - 29))
      | (1ULL << (NaiveSqlParser::INSERT - 29)))) != 0) || _la == NaiveSqlParser::SELECT

    || _la == NaiveSqlParser::UPDATE || _la == NaiveSqlParser::SEMI) {
      setState(123);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case NaiveSqlParser::CREATE:
        case NaiveSqlParser::DELETE:
        case NaiveSqlParser::DROP:
        case NaiveSqlParser::INSERT:
        case NaiveSqlParser::SELECT:
        case NaiveSqlParser::UPDATE: {
          setState(119);
          sqlStatement();
          setState(120);
          match(NaiveSqlParser::SEMI);
          break;
        }

        case NaiveSqlParser::SEMI: {
          setState(122);
          emptyStatement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SqlStatementContext ------------------------------------------------------------------

NaiveSqlParser::SqlStatementContext::SqlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NaiveSqlParser::DdlStatementContext* NaiveSqlParser::SqlStatementContext::ddlStatement() {
  return getRuleContext<NaiveSqlParser::DdlStatementContext>(0);
}

NaiveSqlParser::DmlStatementContext* NaiveSqlParser::SqlStatementContext::dmlStatement() {
  return getRuleContext<NaiveSqlParser::DmlStatementContext>(0);
}


size_t NaiveSqlParser::SqlStatementContext::getRuleIndex() const {
  return NaiveSqlParser::RuleSqlStatement;
}

void NaiveSqlParser::SqlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatement(this);
}

void NaiveSqlParser::SqlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatement(this);
}


antlrcpp::Any NaiveSqlParser::SqlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitSqlStatement(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::SqlStatementContext* NaiveSqlParser::sqlStatement() {
  SqlStatementContext *_localctx = _tracker.createInstance<SqlStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, NaiveSqlParser::RuleSqlStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(130);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NaiveSqlParser::CREATE:
      case NaiveSqlParser::DROP: {
        enterOuterAlt(_localctx, 1);
        setState(128);
        ddlStatement();
        break;
      }

      case NaiveSqlParser::DELETE:
      case NaiveSqlParser::INSERT:
      case NaiveSqlParser::SELECT:
      case NaiveSqlParser::UPDATE: {
        enterOuterAlt(_localctx, 2);
        setState(129);
        dmlStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

NaiveSqlParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NaiveSqlParser::EmptyStatementContext::SEMI() {
  return getToken(NaiveSqlParser::SEMI, 0);
}


size_t NaiveSqlParser::EmptyStatementContext::getRuleIndex() const {
  return NaiveSqlParser::RuleEmptyStatement;
}

void NaiveSqlParser::EmptyStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEmptyStatement(this);
}

void NaiveSqlParser::EmptyStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEmptyStatement(this);
}


antlrcpp::Any NaiveSqlParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::EmptyStatementContext* NaiveSqlParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, NaiveSqlParser::RuleEmptyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(NaiveSqlParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DdlStatementContext ------------------------------------------------------------------

NaiveSqlParser::DdlStatementContext::DdlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NaiveSqlParser::CreateTableContext* NaiveSqlParser::DdlStatementContext::createTable() {
  return getRuleContext<NaiveSqlParser::CreateTableContext>(0);
}

NaiveSqlParser::DropTableContext* NaiveSqlParser::DdlStatementContext::dropTable() {
  return getRuleContext<NaiveSqlParser::DropTableContext>(0);
}

NaiveSqlParser::CreateIndexContext* NaiveSqlParser::DdlStatementContext::createIndex() {
  return getRuleContext<NaiveSqlParser::CreateIndexContext>(0);
}


size_t NaiveSqlParser::DdlStatementContext::getRuleIndex() const {
  return NaiveSqlParser::RuleDdlStatement;
}

void NaiveSqlParser::DdlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDdlStatement(this);
}

void NaiveSqlParser::DdlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDdlStatement(this);
}


antlrcpp::Any NaiveSqlParser::DdlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitDdlStatement(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::DdlStatementContext* NaiveSqlParser::ddlStatement() {
  DdlStatementContext *_localctx = _tracker.createInstance<DdlStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, NaiveSqlParser::RuleDdlStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      createTable();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(135);
      dropTable();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(136);
      createIndex();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableContext ------------------------------------------------------------------

NaiveSqlParser::CreateTableContext::CreateTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t NaiveSqlParser::CreateTableContext::getRuleIndex() const {
  return NaiveSqlParser::RuleCreateTable;
}

void NaiveSqlParser::CreateTableContext::copyFrom(CreateTableContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ColumnCreateTableContext ------------------------------------------------------------------

tree::TerminalNode* NaiveSqlParser::ColumnCreateTableContext::CREATE() {
  return getToken(NaiveSqlParser::CREATE, 0);
}

tree::TerminalNode* NaiveSqlParser::ColumnCreateTableContext::TABLE() {
  return getToken(NaiveSqlParser::TABLE, 0);
}

NaiveSqlParser::TableNameContext* NaiveSqlParser::ColumnCreateTableContext::tableName() {
  return getRuleContext<NaiveSqlParser::TableNameContext>(0);
}

NaiveSqlParser::CreateDefinitionsContext* NaiveSqlParser::ColumnCreateTableContext::createDefinitions() {
  return getRuleContext<NaiveSqlParser::CreateDefinitionsContext>(0);
}

NaiveSqlParser::IfNotExistsContext* NaiveSqlParser::ColumnCreateTableContext::ifNotExists() {
  return getRuleContext<NaiveSqlParser::IfNotExistsContext>(0);
}

NaiveSqlParser::ColumnCreateTableContext::ColumnCreateTableContext(CreateTableContext *ctx) { copyFrom(ctx); }

void NaiveSqlParser::ColumnCreateTableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColumnCreateTable(this);
}
void NaiveSqlParser::ColumnCreateTableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColumnCreateTable(this);
}

antlrcpp::Any NaiveSqlParser::ColumnCreateTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitColumnCreateTable(this);
  else
    return visitor->visitChildren(this);
}
NaiveSqlParser::CreateTableContext* NaiveSqlParser::createTable() {
  CreateTableContext *_localctx = _tracker.createInstance<CreateTableContext>(_ctx, getState());
  enterRule(_localctx, 10, NaiveSqlParser::RuleCreateTable);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<CreateTableContext *>(_tracker.createInstance<NaiveSqlParser::ColumnCreateTableContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(139);
    match(NaiveSqlParser::CREATE);
    setState(140);
    match(NaiveSqlParser::TABLE);
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NaiveSqlParser::IF) {
      setState(141);
      ifNotExists();
    }
    setState(144);
    tableName();
    setState(145);
    createDefinitions();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateIndexContext ------------------------------------------------------------------

NaiveSqlParser::CreateIndexContext::CreateIndexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NaiveSqlParser::CreateIndexContext::CREATE() {
  return getToken(NaiveSqlParser::CREATE, 0);
}

tree::TerminalNode* NaiveSqlParser::CreateIndexContext::INDEX() {
  return getToken(NaiveSqlParser::INDEX, 0);
}

NaiveSqlParser::Index_nameContext* NaiveSqlParser::CreateIndexContext::index_name() {
  return getRuleContext<NaiveSqlParser::Index_nameContext>(0);
}

tree::TerminalNode* NaiveSqlParser::CreateIndexContext::ON() {
  return getToken(NaiveSqlParser::ON, 0);
}

NaiveSqlParser::TableNameContext* NaiveSqlParser::CreateIndexContext::tableName() {
  return getRuleContext<NaiveSqlParser::TableNameContext>(0);
}

NaiveSqlParser::UidContext* NaiveSqlParser::CreateIndexContext::uid() {
  return getRuleContext<NaiveSqlParser::UidContext>(0);
}

tree::TerminalNode* NaiveSqlParser::CreateIndexContext::UNIQUE() {
  return getToken(NaiveSqlParser::UNIQUE, 0);
}


size_t NaiveSqlParser::CreateIndexContext::getRuleIndex() const {
  return NaiveSqlParser::RuleCreateIndex;
}

void NaiveSqlParser::CreateIndexContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateIndex(this);
}

void NaiveSqlParser::CreateIndexContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateIndex(this);
}


antlrcpp::Any NaiveSqlParser::CreateIndexContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitCreateIndex(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::CreateIndexContext* NaiveSqlParser::createIndex() {
  CreateIndexContext *_localctx = _tracker.createInstance<CreateIndexContext>(_ctx, getState());
  enterRule(_localctx, 12, NaiveSqlParser::RuleCreateIndex);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    match(NaiveSqlParser::CREATE);
    setState(149);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NaiveSqlParser::UNIQUE) {
      setState(148);
      match(NaiveSqlParser::UNIQUE);
    }
    setState(151);
    match(NaiveSqlParser::INDEX);
    setState(152);
    index_name();
    setState(153);
    match(NaiveSqlParser::ON);
    setState(154);
    tableName();
    setState(155);
    match(NaiveSqlParser::LR_BRACKET);
    setState(156);
    uid();
    setState(157);
    match(NaiveSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Index_nameContext ------------------------------------------------------------------

NaiveSqlParser::Index_nameContext::Index_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NaiveSqlParser::FullIdContext* NaiveSqlParser::Index_nameContext::fullId() {
  return getRuleContext<NaiveSqlParser::FullIdContext>(0);
}


size_t NaiveSqlParser::Index_nameContext::getRuleIndex() const {
  return NaiveSqlParser::RuleIndex_name;
}

void NaiveSqlParser::Index_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIndex_name(this);
}

void NaiveSqlParser::Index_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIndex_name(this);
}


antlrcpp::Any NaiveSqlParser::Index_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitIndex_name(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::Index_nameContext* NaiveSqlParser::index_name() {
  Index_nameContext *_localctx = _tracker.createInstance<Index_nameContext>(_ctx, getState());
  enterRule(_localctx, 14, NaiveSqlParser::RuleIndex_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    fullId();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionsContext ------------------------------------------------------------------

NaiveSqlParser::CreateDefinitionsContext::CreateDefinitionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NaiveSqlParser::CreateDefinitionContext *> NaiveSqlParser::CreateDefinitionsContext::createDefinition() {
  return getRuleContexts<NaiveSqlParser::CreateDefinitionContext>();
}

NaiveSqlParser::CreateDefinitionContext* NaiveSqlParser::CreateDefinitionsContext::createDefinition(size_t i) {
  return getRuleContext<NaiveSqlParser::CreateDefinitionContext>(i);
}


size_t NaiveSqlParser::CreateDefinitionsContext::getRuleIndex() const {
  return NaiveSqlParser::RuleCreateDefinitions;
}

void NaiveSqlParser::CreateDefinitionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateDefinitions(this);
}

void NaiveSqlParser::CreateDefinitionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NaiveSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateDefinitions(this);
}


antlrcpp::Any NaiveSqlParser::CreateDefinitionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NaiveSqlParserVisitor*>(visitor))
    return parserVisitor->visitCreateDefinitions(this);
  else
    return visitor->visitChildren(this);
}

NaiveSqlParser::CreateDefinitionsContext* NaiveSqlParser::createDefinitions() {
  CreateDefinitionsContext *_localctx = _tracker.createInstance<CreateDefinitionsContext>(_ctx, getState());
  enterRule(_localctx, 16, NaiveSqlParser::RuleCreateDefinitions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(161);
    match(NaiveSqlParser::LR_BRACKET);
    setState(162);
    createDefinition();
    setState(167);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NaiveSqlParser::COMMA) {
      setState(163);
      match(NaiveSqlParser::COMMA);
      setState(164);
      createDefinition();
      setState(169);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(170);
    match(NaiveSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionContext ------------------------------------------------------------------

NaiveSqlParser::CreateDefinitionContext::CreateDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t NaiveSqlParser::CreateDefinitionContext::getRuleIndex() const {
  return NaiveSqlParser::RuleCreateDefinition;
}
